Test - change mobile menu background after leaving header section; fixed header alignment issue

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -683,7 +683,7 @@ label {
   height: 55px;
   align-items: center;
   justify-content: flex-end;
-  margin-left: 150px;
+  margin-left: 30px;
 }
 .menu-item-transparent.menu-item {
   a {
